chapter4/pingpong_logoutput/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-hash
          emptyDir: {}
        - name: info-file
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: hash-generator
          image: vesajo/hash-generator@sha256:c72fae48ff8943f8f2cb1b173b42b37f6ae3e8672cfbcb268d943dd3c711ed4b
          volumeMounts:
            - name: shared-hash
              mountPath: /app/files
        - name: hash-outputter
          image: vesajo/hash-outputter@sha256:74f9f7304534e63499f22b51581bccf62d6362e419bedbec9671e86de5179585
          volumeMounts:
            - name: shared-hash
              mountPath: /app/files/hash-file
            - name: info-file
              mountPath: /app/files/info-file
